@@ -1,5 +1,9 @@
 2002-09-19  Junichi Uekawa  <dancer@debian.org>
 
+	* parameter.c (stripwhitespace): change stripn to stripwhitespace
+	and strip whitespace while we are at it.
+	(read_machinelist): strip whitespace when reading config file.
+
 	* dsh.c (run_input_forking_child_processes_process): trying to debug the thing now.
 	(run_input_forking_child_processes_process): I made a mistake.
 	0 is a end-of-file for read(). Treat it like that, and it should be all happy now.
